# Taylor-Portfolio

./: .gitmodules  README.md
cos109-cnops/: README.md
cos121-cs_foundations/: README.md
cos143-webdev/: README.md  index.html  stylesheet.css  stylesheet.less  test.html  test.js
cos143-webdev/Ajax/: index.html  script.js
cos143-webdev/Assignment_1/: index.html
cos143-webdev/Assignment_2/: index.html  stylesheet.css
cos143-webdev/Assignment_3/: index.html
cos143-webdev/Assignment_4/: index.html  stylesheet.css
cos143-webdev/Assignment_5/: index.html  (+1 more)
cos232-security/: README.md
cos243-multier_webdev/: README.md  taylor-count.js
cos265-datastructures/: README.md
cos280-intro_to_ai/: README.md  dots.lsp  list.lsp  mylength.lsp  prove.lsp
cos284-intro_to_comp_systems/: README.md
cos326-data_visualization/: README.md
cos331-datacom/: README.md
cos343-database_systems/: README.md
cos370-blockchain/: Capture The Ether.md  README.md
cos370-blockchain/dyi-blockchain/: Blockchain Runtime Analysis.md  CMakeLists.txt  FEEDBACK.md  main.cpp  runtime-data.numbers
cos381-computer_architecture/: Assembly Reference.numbers  Exam 0 Questions.md  README.md
cos382-language_structures/: README.md
cos421-operating_systems/: README.md
cos432-software_reverse_engineering/: README.md
cos435-theory_of_computation/: README.md
cos436-parallel_and_distributed_computing/: README.md
cos452&3-research/: README.md
course/: cos109  cos232  cos331  cos370-blockchain  cos421
mat311-data_science/: README.md
sys411-machine_learning/: README.md
(+179 files in other folders)
